Issue #18028: Fix aliasing issue in READ_TIMESTAMP() of ceval.c  on x86_64, when Python is configure with --with-tsc. Patch written by Christian Heimes.